--- a/resources/templates/provision/yealink/t23g/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t23g/{$mac}.cfg
@@ -410,7 +410,7 @@ account.1.cid_source_privacy = 1
 account.1.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.1.cp_source = 2
+account.1.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -882,7 +882,7 @@ account.2.cid_source_privacy = 1
 account.2.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.2.cp_source = 2
+account.2.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -1368,7 +1368,7 @@ account.3.cid_source_privacy = 1
 account.3.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.3.cp_source = 2
+account.3.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -1844,7 +1844,7 @@ account.4.cid_source_privacy = 1
 account.4.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.4.cp_source = 2
+account.4.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -2320,7 +2320,7 @@ account.5.cid_source_privacy = 1
 account.5.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.5.cp_source = 2
+account.5.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -2795,7 +2795,7 @@ account.6.cid_source_privacy = 1
 account.6.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.6.cp_source = 2
+account.6.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
