--- a/resources/templates/provision/yealink/t2x/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t2x/{$mac}.cfg
@@ -357,7 +357,7 @@ account.{$row.line_number}.cid_source_privacy = 1
 account.{$row.line_number}.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916
-account.{$row.line_number}.cp_source = 2
+account.{$row.line_number}.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
