--- a/resources/templates/provision/yealink/t33g/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t33g/{$mac}.cfg
@@ -292,7 +292,7 @@ account.1.vq_rtcpxr.collector_server_port=
 account.1.vq_rtcpxr.collector_server_host=
 account.1.vq_rtcpxr.collector_name=
 account.1.compact_header_enable=
-account.1.cp_source= 2
+account.1.cp_source = {$yealink_cp_source}
 account.1.cid_source_ppi= 1
 account.1.cid_source_privacy= 1
 account.1.reg_with_pani_header.enable =
@@ -863,7 +863,7 @@ account.2.vq_rtcpxr.collector_server_port=
 account.2.vq_rtcpxr.collector_server_host=
 account.2.vq_rtcpxr.collector_name=
 account.2.compact_header_enable=
-account.2.cp_source= 2
+account.2.cp_source = {$yealink_cp_source}
 account.2.cid_source_ppi= 1
 account.2.cid_source_privacy= 1
 account.2.reg_with_pani_header.enable =
@@ -1431,7 +1431,7 @@ account.3.vq_rtcpxr.collector_server_port=
 account.3.vq_rtcpxr.collector_server_host=
 account.3.vq_rtcpxr.collector_name=
 account.3.compact_header_enable=
-account.3.cp_source= 2
+account.3.cp_source = {$yealink_cp_source}
 account.3.cid_source_ppi= 1
 account.3.cid_source_privacy= 1
 account.3.reg_with_pani_header.enable =
@@ -1999,7 +1999,7 @@ account.4.vq_rtcpxr.collector_server_port=
 account.4.vq_rtcpxr.collector_server_host=
 account.4.vq_rtcpxr.collector_name=
 account.4.compact_header_enable=
-account.4.cp_source= 2
+account.4.cp_source = {$yealink_cp_source}
 account.4.cid_source_ppi= 1
 account.4.cid_source_privacy= 1
 account.4.reg_with_pani_header.enable =
