--- a/resources/templates/provision/yealink/t41p/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t41p/{$mac}.cfg
@@ -396,7 +396,7 @@ account.1.cid_source_privacy = 1
 account.1.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.1.cp_source = 2
+account.1.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -865,7 +865,7 @@ account.2.cid_source_privacy = 1
 account.2.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.2.cp_source = 2
+account.2.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -1378,7 +1378,7 @@ account.3.cid_source_privacy = 1
 account.3.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.3.cp_source = 2
+account.3.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -1874,7 +1874,7 @@ account.4.cid_source_privacy = 1
 account.4.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.4.cp_source = 2
+account.4.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -2370,7 +2370,7 @@ account.5.cid_source_privacy = 1
 account.5.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.5.cp_source = 2
+account.5.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
@@ -2865,7 +2865,7 @@ account.6.cid_source_privacy = 1
 account.6.cid_source_ppi = 1
 
 #Configure the presentation of the callee ID; 0-PAI-PRID, 1-DIALED DIGITS (default), 2-RFC4916;
-account.6.cp_source = 2
+account.6.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
