--- a/resources/templates/provision/yealink/t52s/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t52s/{$mac}.cfg
@@ -501,7 +501,7 @@ account.1.vq_rtcpxr.collector_server_port=
 account.1.vq_rtcpxr.collector_server_host=
 account.1.vq_rtcpxr.collector_name=
 account.1.compact_header_enable=
-account.1.cp_source=
+account.1.cp_source = {$yealink_cp_source}
 account.1.cid_source_ppi=
 account.1.cid_source_privacy=
 
