--- a/resources/templates/provision/yealink/t57w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t57w/{$mac}.cfg
@@ -288,7 +288,7 @@ account.1.vq_rtcpxr.collector_server_port=
 account.1.vq_rtcpxr.collector_server_host=
 account.1.vq_rtcpxr.collector_name=
 account.1.compact_header_enable=
-account.1.cp_source=
+account.1.cp_source = {$yealink_cp_source}
 account.1.cid_source_ppi=
 account.1.cid_source_privacy=
 account.1.reg_with_pani_header.enable =
@@ -827,7 +827,7 @@ account.2.vq_rtcpxr.collector_server_port=
 account.2.vq_rtcpxr.collector_server_host=
 account.2.vq_rtcpxr.collector_name=
 account.2.compact_header_enable=
-account.2.cp_source=
+account.2.cp_source = {$yealink_cp_source}
 account.2.cid_source_ppi=
 account.2.cid_source_privacy=
 account.2.reg_with_pani_header.enable =
@@ -1354,7 +1354,7 @@ account.3.vq_rtcpxr.collector_server_port=
 account.3.vq_rtcpxr.collector_server_host=
 account.3.vq_rtcpxr.collector_name=
 account.3.compact_header_enable=
-account.3.cp_source=
+account.3.cp_source = {$yealink_cp_source}
 account.3.cid_source_ppi=
 account.3.cid_source_privacy=
 account.3.reg_with_pani_header.enable =
@@ -1881,7 +1881,7 @@ account.4.vq_rtcpxr.collector_server_port=
 account.4.vq_rtcpxr.collector_server_host=
 account.4.vq_rtcpxr.collector_name=
 account.4.compact_header_enable=
-account.4.cp_source=
+account.4.cp_source = {$yealink_cp_source}
 account.4.cid_source_ppi=
 account.4.cid_source_privacy=
 account.4.reg_with_pani_header.enable =
@@ -2407,7 +2407,7 @@ account.5.vq_rtcpxr.collector_server_port=
 account.5.vq_rtcpxr.collector_server_host=
 account.5.vq_rtcpxr.collector_name=
 account.5.compact_header_enable=
-account.5.cp_source=
+account.5.cp_source = {$yealink_cp_source}
 account.5.cid_source_ppi=
 account.5.cid_source_privacy=
 account.5.reg_with_pani_header.enable =
@@ -2947,7 +2947,7 @@ account.6.vq_rtcpxr.collector_server_port=
 account.6.vq_rtcpxr.collector_server_host=
 account.6.vq_rtcpxr.collector_name=
 account.6.compact_header_enable=
-account.6.cp_source=
+account.6.cp_source = {$yealink_cp_source}
 account.6.cid_source_ppi=
 account.6.cid_source_privacy=
 account.6.reg_with_pani_header.enable =
@@ -3474,7 +3474,7 @@ account.7.vq_rtcpxr.collector_server_port=
 account.7.vq_rtcpxr.collector_server_host=
 account.7.vq_rtcpxr.collector_name=
 account.7.compact_header_enable=
-account.7.cp_source=
+account.7.cp_source = {$yealink_cp_source}
 account.7.cid_source_ppi=
 account.7.cid_source_privacy=
 account.7.reg_with_pani_header.enable =
@@ -4001,7 +4001,7 @@ account.8.vq_rtcpxr.collector_server_port=
 account.8.vq_rtcpxr.collector_server_host=
 account.8.vq_rtcpxr.collector_name=
 account.8.compact_header_enable=
-account.8.cp_source=
+account.8.cp_source = {$yealink_cp_source}
 account.8.cid_source_ppi=
 account.8.cid_source_privacy=
 account.8.reg_with_pani_header.enable =
@@ -4528,7 +4528,7 @@ account.9.vq_rtcpxr.collector_server_port=
 account.9.vq_rtcpxr.collector_server_host=
 account.9.vq_rtcpxr.collector_name=
 account.9.compact_header_enable=
-account.9.cp_source=
+account.9.cp_source = {$yealink_cp_source}
 account.9.cid_source_ppi=
 account.9.cid_source_privacy=
 account.9.reg_with_pani_header.enable =
@@ -5055,7 +5055,7 @@ account.10.vq_rtcpxr.collector_server_port=
 account.10.vq_rtcpxr.collector_server_host=
 account.10.vq_rtcpxr.collector_name=
 account.10.compact_header_enable=
-account.10.cp_source=
+account.10.cp_source = {$yealink_cp_source}
 account.10.cid_source_ppi=
 account.10.cid_source_privacy=
 account.10.reg_with_pani_header.enable =
