--- a/resources/templates/provision/yealink/vp59/{$mac}.cfg
+++ b/resources/templates/provision/yealink/vp59/{$mac}.cfg
@@ -387,7 +387,7 @@ account.{$row.line_number}.conf_uri =
 account.{$row.line_number}.cid_source = {$yealink_cid_source}
 account.{$row.line_number}.cid_source_privacy = 
 account.{$row.line_number}.cid_source_ppi = 
-account.{$row.line_number}.cp_source = 
+account.{$row.line_number}.cp_source = {$yealink_cp_source}
 
 #######################################################################################
 ##                            Session Timer                                          ##
